@@ -1,5 +1,10 @@
+2015-02-12  6.9.0-6 Dirk Lemstra <dirk@lem.....org>
+  * Fixed command line execution in Windows for delegates that
+    move files (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=27027).
+
 2015-02-10  6.9.0-6 Cristy  <quetzlzacatenango@image...>
-  * A transient bug for the  write MSL element (reference
+  * A transient bug for the write MSL element (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=27022).
 
 2015-02-08  6.9.0-6 Glenn Randers-Pehrson <glennrp@image...>
